# sunfounder_tts

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  _base.py  brick_compose.yaml  brick_config.yaml  edge_tts.py  espeak.py  pyproject.toml
docs/: README.md  apt-requirements.txt  requirements.txt
examples/: tts_edge.py  tts_espeak.py  tts_openai.py
sunfounder_tts/: __init__.py  _audio_player.py  _base.py  _logger.py  _pulse_audio.py  _utils.py  _version.py  edge_tts.py  espeak.py  openai_tts.py
