[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunfounder-tts"
version = "1.0.0"
description = "Text-to-speech with multiple engines (EdgeTTS, Espeak, OpenAI TTS)"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "SunFounder"},
]
keywords = ["text-to-speech", "tts", "edge-tts", "espeak", "openai", "voice"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "edge-tts>=6.0",
    "numpy>=1.24",
    "pyaudio>=0.2",
    "requests>=2.25",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Repository = "https://github.com/sunfounder/uno-q-ai-robot-plus"

[tool.setuptools]
packages = ["sunfounder_tts"]
package-dir = {"sunfounder_tts" = "."}
